--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.4.1",
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.4.1",
     "nodemon": "^2.0.4"
   }
 }
